tests/out/error/result/or_type_mismatch.in.bt
fun res() !i32 {
	return error("")
}

a := res() or {
	"hi"
}

b := res() or {}

_ = res() or {
	somevar // error: undefined identifier
}

// No error
c := res() or {
	panic(err)
}
