tests/out/error/result/or_type_mismatch.out
tests/out/error/result/or_type_mismatch.in.bt:5:6 error: `or` bock must:
  - Provide a default value of type `i32`, OR
  - Change the control-flow (return/continue/break), OR
  - Call a @noreturn function
tests/out/error/result/or_type_mismatch.in.bt:9:6 error: `or` bock must:
  - Provide a default value of type `i32`, OR
  - Change the control-flow (return/continue/break), OR
  - Call a @noreturn function
tests/out/error/result/or_type_mismatch.in.bt:12:2 error: undefined ident `somevar`
